# chess_2

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
src/chess_2/board/: board_representation.py  board_state.py
src/chess_2/game/: gameloop.py
src/chess_2/piece/: piece.py
src/chess_2/piece_movement/: king.py  knight.py  move_generator.py  move_validation.py  pawn.py  piece_move.py  queen.py  rook.py
src/chess_2/utils/: enums.py  fen.py  input_validation.py  move_validation.py  types.py
tests/: helpers.py  test_sanity.py
tests/test_board/test_board_repr/: test_generate_board_repr.py  test_get_piece_repr.py
tests/test_board/test_board_state/: test_BoardState.py
tests/test_piece/: test_piece.py
tests/test_piece_movement/: test_bishop.py  test_get_valid_moves.py  test_king.py  test_knight.py  test_move_generator.py  test_pawn.py  test_queen.py  test_rook.py
tests/test_utils/: test_fen.py  test_input_validation.py  test_move_validation.py
